--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Gradle
-.gradle
+/.gradle/
+/build/
 
 # Eclipse
 .checkstyle
@@ -18,7 +19,6 @@
 
 # Build artifacts
 bin/
-build/
 jars/
 out/
 classes/
