a rather disgusting buildscript to get modularization 'working'
Signed-off-by: Devan-Kerman <dev.sel20@gmail.com>

--- a/astrarre-rendering-v0/build.gradle
+++ b/astrarre-rendering-v0/build.gradle
@@ -1,4 +1,6 @@
 version '0.0.1'
+hasAbstractions(project)
 dependencies {
     implementation project(":astrarre-base")
+    implementation project(":astrarre-common-v0")
 }
