--- a/astrarre-rendering-v0/build.gradle
+++ b/astrarre-rendering-v0/build.gradle
@@ -1,6 +1,2 @@
 version '0.0.1'
-hasAbstractions(project)
-dependencies {
-    implementation project(":astrarre-base")
-    implementation project(":astrarre-common-v0")
-}
+moduleDependencies(project, ['astrarre-common-v0'])
