--- a/astrarre-common-v0/build.gradle
+++ b/astrarre-common-v0/build.gradle
@@ -1,2 +1,7 @@
 version '0.0.1'
 hasAbstraction(project)
+
+dependencies {
+    implementation 'com.github.Chocohead:fabric-asm:v2.1'
+    include 'com.github.Chocohead:fabric-asm:v2.1'
+}
