--- a/astrarre-gui-v0/build.gradle
+++ b/astrarre-gui-v0/build.gradle
@@ -1,2 +1,2 @@
 version '0.0.0'
-moduleDependencies(project, ['astrarre-rendering-v0', 'astrarre-networking-v0'])
+moduleDependencies(project, ['astrarre-common-v0'])
